git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@12 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.6.4  November 17, 2007
+Version 2.6.6  November xx, 2007
 
 
 <p>
@@ -85,12 +85,13 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>James Crane at <a href="http://youcantradeonline.co.uk">You Can Trade Online</a>
 <li>James Lloyd at <a href="http://columbiaforestproducts.com">Columbia Forest Products</a>
 <li>Jeffery Cooney
+<li>Joseph Prochazka at <a href="http://swiftbyte.com">Swift Byte</a>
 <li>Kellee Gunderson at <a href="http://ChampionCollegeSolutions.com">Champion College Solutions</a>
 <li>M. Bell at <a href="http://codefaze.com">Codefaze.com</a>
 <li>Martina Hobbs at <a href="http://bannerhealth.com">Banner Health</a>
 <li>matro
 <li>Michael Andreas at <a href="http://liebherr.com">Liebherr</a>
-<li>Mike" at <a href="http://efactory.ca">eFactory</a>
+<li>Mike Elmalem at <a href="http://efactory.ca">eFactory</a>
 <li>Peter Heath
 <li>romwil
 
