git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@43 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.6.8  December 07, 2007
+Version 2.6.9  December 14, 2007
 
 
 <p>
@@ -76,7 +76,8 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <b>Thanks to the following for their donations:</b>
 <p>
 <li><a href="http://legiomedia.com">Legio Media</a>
-<li>Andrew McKay at <a href=http://www.kazmax.co.uk>www.kazmax.co.uk</a>
+<li>Ahmed Javad at <a href="http://valentiatech.com">Valentia Technologies</a>
+<li>Andrew McKay at <a href="http://www.kazmax.co.uk">www.kazmax.co.uk</a>
 <li>Ben Petersen
 <li>bidllc
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
