--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.7.1  December XX, 2007
+Version 2.7.1  January 6, 2008
 
 
 <p>
