git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@77 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2002-2007 Corey Trager
+Copyright 2002-2008 Corey Trager
 Distributed under the terms of the GNU General Public License
 -->
 
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.7.4  January 27, 2008
+Version 2.7.5  February 2, 2008
 
 
 <p>
@@ -81,6 +81,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Ben Petersen
 <li>bidllc
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
+<li>Daniel Watts
 <li>David Jukes at <a href="http://bigpond.com">BigPond</a>
 <li>Goran Mrvos at <a href="http://www.infosit.hr">infoSIT</a>
 <li>James Crane at <a href="http://youcantradeonline.co.uk">You Can Trade Online</a>
