git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@85 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.7.5  February 2, 2008
+Version 2.7.6  February 8, 2008
 
 
 <p>
@@ -69,6 +69,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Maty Siman at <a href=http://www.checkmarx.com>www.checkmarx.com</a> for security-related contributions.
 <li>Michael Andreas for reporting bugs and for encouragement.
 <li>Michael Wilson for both ideas AND the code for several important features.
+<li>Si Wong for reporting and explaining important security vulnerabilities (fixed now).
 <li>Sylvain Ross for performance improvements to btnet_service.exe, btnet_console.exe
 <li>Tom Sella for improvements related to using terms like "issue" instead of "bug".
 
@@ -95,6 +96,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Michael Andreas at <a href="http://liebherr.com">Liebherr</a>
 <li>Mike Elmalem at <a href="http://efactory.ca">eFactory</a>
 <li>Peter Heath
+<li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
 <li>romwil
 
 <p>
