git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@95 25256582-783d-0410-8f03-f819f29fef2d

--- a/custom/custom_header.html
+++ b/custom/custom_header.html
@@ -1,2 +1,2 @@
 
-<!-- Header - Changes don't take effect until you restart the web application -->
+<!-- Header - Changes don't take effect until you restart the IIS web application -->
