--- a/custom/custom_logo.html
+++ b/custom/custom_logo.html
@@ -1,6 +1,6 @@
 
 <!-- start logo -->
-<!-- Changes don't take effect until you restart the web application -->
+<!-- Changes don't take effect until you restart the IIS web application -->
 
 <td width=100 valign=middle><a href=http://ifdefined.com/bugtrackernet.html><div class=logo>BugTracker.NET</div></a></td>
 
