--- a/custom/custom_footer.html
+++ b/custom/custom_footer.html
@@ -1,2 +1,2 @@
 
-<!-- Footer - Changes don't take effect until you restart the web application -->
+<!-- Footer - Changes don't take effect until you restart the IIS web application -->
