git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@99 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.7.6  February 8, 2008
+Version 2.7.8  February 23, 2008
 
 
 <p>
@@ -62,6 +62,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Andrew Lovetski for so much bug reporting.
 <li>Andrew McKay at <a href=http://www.kazmax.co.uk>www.kazmax.co.uk</a> for interesting ideas.
 <li>Eugene Kalinin for constructive critical feedback in the early days.
+<li>Gérard Chanekon for bug fixes to workflow.cs
 <li>Jason Kresowaty for contributions to the Subversion integration and attachments in the db.
 <li>Jason Taylor for converting urls and email addresses in comments to hyperlinks.
 <li>Jochen Jonckheere for many important bug reports, the clever translate.aspx sample, and intergrating FCKEditor.
@@ -84,6 +85,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
 <li>Daniel Watts
 <li>David Jukes at <a href="http://bigpond.com">BigPond</a>
+<li>Don McKillop at <a href="http://www.camcadtech.com">CAMcad Technologies</a>
 <li>Goran Mrvos at <a href="http://www.infosit.hr">infoSIT</a>
 <li>James Crane at <a href="http://youcantradeonline.co.uk">You Can Trade Online</a>
 <li>James Lloyd at <a href="http://columbiaforestproducts.com">Columbia Forest Products</a>
@@ -98,6 +100,8 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Peter Heath
 <li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
 <li>romwil
+
+
 
 <p>
 
