git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@106 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.7.9  March 1, 2008
+Version 2.7.9 (in progress) March 1, 2008
 
 
 <p>
@@ -59,6 +59,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <p>
 <b>Thanks to the following for their technical contributions:</b>
 <p>
+<li>Alexej Hirsch for his excellent <a href="http://www.bugshooting.com">"Bug Shooting"</a> screen capture utility. Better than mine.
 <li>Andrew Lovetski for so much bug reporting.
 <li>Andrew McKay at <a href=http://www.kazmax.co.uk>www.kazmax.co.uk</a> for interesting ideas.
 <li>Eugene Kalinin for constructive critical feedback in the early days.
@@ -80,6 +81,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li><a href="http://legiomedia.com">Legio Media</a>
 <li>Ahmed Javad at <a href="http://valentiatech.com">Valentia Technologies</a>
 <li>Andrew McKay at <a href="http://www.kazmax.co.uk">www.kazmax.co.uk</a>
+<li>Anthony Goggin at <a href="http://www.solutionwhere.com/">Solutionwhere, Inc.</a>
 <li>Ben Petersen
 <li>bidllc
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
