git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@117 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,12 +15,12 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.7.9 (in progress) March 1, 2008
+Version 2.8.0 March 8, 2008
 
 
 <p>
 <p>
-Copyright 2002-2007 Corey Trager - ctrager@yahoo.com
+Copyright 2002-2008 Corey Trager - ctrager@yahoo.com
 <br>
 Distributed under the terms of the <a target=_blank href="COPYING">GNU General Public License</a>
 <br>
