--- a/about.html
+++ b/about.html
@@ -62,6 +62,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Alexej Hirsch for his excellent <a href="http://www.bugshooting.com">"Bug Shooting"</a> screen capture utility. Better than mine.
 <li>Andrew Lovetski for so much bug reporting.
 <li>Andrew McKay at <a href=http://www.kazmax.co.uk>www.kazmax.co.uk</a> for interesting ideas.
+<li>Antonio Nunes for helpful contributions.
 <li>Eugene Kalinin for constructive critical feedback in the early days.
 <li>Gérard Chanekon for bug fixes to workflow.cs
 <li>Jason Kresowaty for contributions to the Subversion integration and attachments in the db.
@@ -84,6 +85,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Anthony Goggin at <a href="http://www.solutionwhere.com/">Solutionwhere, Inc.</a>
 <li>Ben Petersen
 <li>bidllc
+<li>Chris Harrington
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
 <li>Daniel Watts
 <li>David Jukes at <a href="http://bigpond.com">BigPond</a>
