git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@154 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.8.5 May 10, 2008
+Version 2.8.6 May 29, 2008
 
 
 <p>
@@ -104,7 +104,9 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Peter Heath
 <li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
 <li>Samuel Morree at <a href="http://trandsoft.com/">Trandsoft Research</a>
+<li>Sotirios Filippidis
 <li>romwil
+<li>William Henderson at <a href="http://msb-services.com">MSB</a>
 
 
 
