git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@162 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.8.6 Jun 15, 2008
+Version 2.8.8 Sep 7, 2008
 
 
 <p>
@@ -94,6 +94,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>James Crane at <a href="http://youcantradeonline.co.uk">You Can Trade Online</a>
 <li>James Lloyd at <a href="http://columbiaforestproducts.com">Columbia Forest Products</a>
 <li>Jeffery Cooney
+<li>Joe Loll
 <li>Joseph Prochazka at <a href="http://swiftbyte.com">Swift Byte</a>
 <li>Kellee Gunderson at <a href="http://ChampionCollegeSolutions.com">Champion College Solutions</a>
 <li>M. Bell at <a href="http://codefaze.com">Codefaze.com</a>
@@ -105,6 +106,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
 <li>Samuel Morree at <a href="http://trandsoft.com/">Trandsoft Research</a>
 <li>Sotirios Filippidis
+<li>Stanimir Mladenov
 <li>romwil
 <li>William Henderson at <a href="http://msb-services.com">MSB</a>
 
