git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@179 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.9.1 Sep 14, 2008
+Version 2.9.2 Sep XX, 2008
 
 
 <p>
