--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.9.2 Sep XX, 2008
+Version 2.9.2 Sep 26, 2008
 
 
 <p>
