--- a/about.html
+++ b/about.html
@@ -72,6 +72,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Maty Siman at <a href=http://www.checkmarx.com>www.checkmarx.com</a> for security-related contributions.
 <li>Michael Andreas for reporting bugs and for encouragement.
 <li>Michael Wilson for both ideas AND the code for several important features.
+<li>Richard Adleta for Windows user self registration
 <li>Si Wong for reporting and explaining important security vulnerabilities (fixed now).
 <li>Sylvain Ross for performance improvements to btnet_service.exe, btnet_console.exe
 <li>Tom Sella for improvements related to using terms like "issue" instead of "bug".
