git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@189 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.9.3 Oct 4, 2008
+Version 2.9.3 Oct 5, 2008
 
 
 <p>
@@ -72,7 +72,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Maty Siman at <a href=http://www.checkmarx.com>www.checkmarx.com</a> for security-related contributions.
 <li>Michael Andreas for reporting bugs and for encouragement.
 <li>Michael Wilson for both ideas AND the code for several important features.
-<li>Richard Adleta for Windows user automatic registration
+<li>Richard Adleta for the Windows user automatic registration feature.
 <li>Si Wong for reporting and explaining important security vulnerabilities (fixed now).
 <li>Sylvain Ross for performance improvements to btnet_service.exe, btnet_console.exe
 <li>Tom Sella for improvements related to using terms like "issue" instead of "bug".
