git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@191 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ Version 2.9.3 Oct 5, 2008
 <p>
 Copyright 2002-2008 Corey Trager - ctrager@yahoo.com
 <br>
-Distributed under the terms of the <a target=_blank href="COPYING">GNU General Public License</a>
+Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU General Public License</a>
 <br>
 </p>
 
