--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.9.4 Oct xx, 2008
+Version 2.9.4 Oct 10, 2008
 
 
 <p>
