git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@222 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li><a target=_blank href=http://anmar.eu.org/projects/sharpmimetools//>SharpMailTools</a> (parsing MIME messages) - Copyright Angel Marin 2003-2007
 <li><a target=_blank href=http://logging.apache.org/log4net/>log4net</a> (logging library used by SharpMailTools) - Apache Software Foundation
 <li><a target=_blank href=http://www.fckeditor.net//>FCKEditor</a> (HTML text editor) - Frederico Caldeira Knabben
-<li><a target=_blank href=http://incubator.apache.org/lucene.net///>Lucene.Net</a> (text search engine) - Apache Software Foundation
-
+<li><a target=_blank href=http://incubator.apache.org/lucene.net>Lucene.Net</a> (text search engine) - Apache Software Foundation
+<li><a target=_blank href=http://www.famfamfam.com>Silk Icons</a> - from Mark Jame's at <a target=_blank href=http://www.famfamfam.com>famfamfam.com</a>
 <p>
 <b>Thanks to the following for their technical contributions:</b>
 <p>
