git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@229 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -90,6 +90,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Chris Harrington
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
 <li>Daniel Watts
+<li>Dave Spicer
 <li>David Jukes at <a href="http://bigpond.com">BigPond</a>
 <li>Don McKillop at <a href="http://www.camcadtech.com">CAMcad Technologies</a>
 <li>Goran Mrvos at <a href="http://www.infosit.hr">infoSIT</a>
