--- a/about.html
+++ b/about.html
@@ -51,12 +51,13 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <b>BugTracker.NET also includes the following software:</b>
 <p>
 <li><a target=_blank href=http://www.codeproject.com/cs/internet/pop3client.asp>POP3Client.cs</a> - Bill Dean
-<li><a target=_blank href=http://anmar.eu.org/projects/sharpmimetools//>SharpMailTools</a> (parsing MIME messages) - Copyright Angel Marin 2003-2007
+<li><a target=_blank href=http://anmar.eu.org/projects/sharpmimetools//>SharpMailTools</a> (parsing MIME messages) - Copyright Angel Marin 2003-2007, LGPL license
 <li><a target=_blank href=http://logging.apache.org/log4net/>log4net</a> (logging library used by SharpMailTools) - Apache Software Foundation
-<li><a target=_blank href=http://www.fckeditor.net//>FCKEditor</a> (HTML text editor) - Frederico Caldeira Knabben
+<li><a target=_blank href=http://www.fckeditor.net//>FCKEditor</a> (HTML text editor) - Copyright 2003-2007 Frederico Caldeira Knabben, GPL, LGPL, or MPL license
 <li><a target=_blank href=http://incubator.apache.org/lucene.net>Lucene.Net</a> (text search engine) - Apache Software Foundation
-<li><a target=_blank href=http://www.famfamfam.com>Silk Icons</a> - from Mark Jame's at <a target=_blank href=http://www.famfamfam.com>famfamfam.com</a>
-<li><a target=_blank href=http://jquery.com>jQuery</a> - javascript library from the "jQuery Team"</a>
+<li><a target=_blank href=http://www.famfamfam.com>Silk Icons</a> - from Mark Jame's at <a target=_blank href=http://www.famfamfam.com>famfamfam.com</a>, Creative Commons license
+<li><a target=_blank href=http://jquery.com>jQuery</a> - javascript library - Copyright <a href=http://ejohn.org/>John Resig</a> 2008, MIT or GPL license.
+<li><a target=_blank href=http://datejs.com>Datejs</a> - javascript library for date handling - Copyright <a href=http://www.coolite.com>Coolite Inc.</a> 2006-2007, MIT license.
 <p>
 <b>Thanks to the following for their technical contributions:</b>
 <p>
