git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@249 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <b>BugTracker.NET also includes the following software:</b>
 <p>
 <li><a target=_blank href=http://www.codeproject.com/cs/internet/pop3client.asp>POP3Client.cs</a> - Bill Dean
-<li><a target=_blank href=http://anmar.eu.org/projects/sharpmimetools//>SharpMailTools</a> (parsing MIME messages) - Copyright Angel Marin 2003-2007, LGPL license
+<li><a target=_blank href=http://anmar.eu.org/projects/sharpmimetools>SharpMimeTools</a> (parsing MIME messages) - Copyright Angel Marin 2003-2007, LGPL license
 <li><a target=_blank href=http://logging.apache.org/log4net/>log4net</a> (logging library used by SharpMailTools) - Apache Software Foundation
 <li><a target=_blank href=http://www.fckeditor.net//>FCKEditor</a> (HTML text editor) - Copyright 2003-2007 Frederico Caldeira Knabben, GPL, LGPL, or MPL license
 <li><a target=_blank href=http://incubator.apache.org/lucene.net>Lucene.Net</a> (text search engine) - Apache Software Foundation
