--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 3.0.0 Nov 9, 2008
+Version 3.0.1 Nov xx, 2008
 
 
 <p>
