git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@258 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -111,6 +111,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Samuel Morree at <a href="http://trandsoft.com/">Trandsoft Research</a>
 <li>Sotirios Filippidis
 <li>Stanimir Mladenov
+<li>Steven Stadler at <a href="http://incircuits.com/">InCircuits, Incorporated</a>
 <li>romwil
 <li>William Henderson at <a href="http://msb-services.com">MSB</a>
 
