git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@287 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -100,6 +100,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Jeffery Cooney
 <li>Joe Loll
 <li>Joseph Prochazka at <a href="http://swiftbyte.com">Swift Byte</a>
+<li>Josh Assing at <a href="http://jassing.com">JAssing Consulting</a>
 <li>Kellee Gunderson at <a href="http://ChampionCollegeSolutions.com">Champion College Solutions</a>
 <li>M. Bell at <a href="http://codefaze.com">Codefaze.com</a>
 <li>Martina Hobbs at <a href="http://bannerhealth.com">Banner Health</a>
