git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@290 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -109,6 +109,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Mike Elmalem at <a href="http://efactory.ca">eFactory</a>
 <li>Peter Heath
 <li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
+<li>Said Nashef
 <li>Samuel Morree at <a href="http://trandsoft.com/">Trandsoft Research</a>
 <li>Sotirios Filippidis
 <li>Stanimir Mladenov
