git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@294 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -99,6 +99,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>James Lloyd at <a href="http://columbiaforestproducts.com">Columbia Forest Products</a>
 <li>Jeffery Cooney
 <li>Joe Loll
+<li>John Braga at Crown Systems
 <li>Joseph Prochazka at <a href="http://swiftbyte.com">Swift Byte</a>
 <li>Josh Assing at <a href="http://jassing.com">JAssing Consulting</a>
 <li>Kellee Gunderson at <a href="http://ChampionCollegeSolutions.com">Champion College Solutions</a>
