git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@302 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 3.0.9 Jan 25, 2009
+Version 3.1.0 Jan 31, 2009
 
 
 <p>
@@ -110,12 +110,13 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Mike Elmalem at <a href="http://efactory.ca">eFactory</a>
 <li>Peter Heath
 <li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
+<li>romwil
 <li>Said Nashef
 <li>Samuel Morree at <a href="http://trandsoft.com/">Trandsoft Research</a>
 <li>Sotirios Filippidis
 <li>Stanimir Mladenov
 <li>Steven Stadler at <a href="http://incircuits.com/">InCircuits, Incorporated</a>
-<li>romwil
+<li>Tian van Heerden
 <li>William Henderson at <a href="http://msb-services.com">MSB</a>
 
 
