--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 3.1.1 Feb 7, 2009
+Version 3.1.2 Feb X, 2009
 
 
 <p>
@@ -100,6 +100,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Jeffery Cooney
 <li>Joe Loll
 <li>John Braga at Crown Systems
+<li><a href="http://jonrumens.com">Jon Rumens</a>
 <li>Joseph Prochazka at <a href="http://swiftbyte.com">Swift Byte</a>
 <li>Josh Assing at <a href="http://jassing.com">JAssing Consulting</a>
 <li>Kellee Gunderson at <a href="http://ChampionCollegeSolutions.com">Champion College Solutions</a>
