git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@321 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 3.1.5 Mar 16, 2009
+Version 3.1.6 Apr 04, 2009
 
 
 <p>
@@ -101,6 +101,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Jeffery Cooney
 <li>Joe Loll
 <li>John Braga at Crown Systems
+<li>John Peters
 <li><a href="http://jonrumens.com">Jon Rumens</a>
 <li>Joseph Prochazka at <a href="http://swiftbyte.com">Swift Byte</a>
 <li>Josh Assing at <a href="http://jassing.com">JAssing Consulting</a>
