--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 3.1.6 Apr 04, 2009
+Version 3.1.7 Apr XX, 2009
 
 
 <p>
@@ -105,6 +105,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li><a href="http://jonrumens.com">Jon Rumens</a>
 <li>Joseph Prochazka at <a href="http://swiftbyte.com">Swift Byte</a>
 <li>Josh Assing at <a href="http://jassing.com">JAssing Consulting</a>
+<li>Vincent Alexander at Kando Systems
 <li>Kellee Gunderson at <a href="http://ChampionCollegeSolutions.com">Champion College Solutions</a>
 <li>M. Bell at <a href="http://codefaze.com">Codefaze.com</a>
 <li>Martina Hobbs at <a href="http://bannerhealth.com">Banner Health</a>
@@ -120,6 +121,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Stanimir Mladenov
 <li>Steven Stadler at <a href="http://incircuits.com/">InCircuits, Incorporated</a>
 <li>Tian van Heerden
+<li>Wagner Ignacio Pinto Junior
 <li>William Henderson at <a href="http://msb-services.com">MSB</a>
 
 
