git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@326 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -75,6 +75,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Michael Andreas for reporting bugs and for encouragement.
 <li>Michael Wilson for both ideas AND the code for several important features.
 <li>Richard Adleta for the Windows user automatic registration feature.
+<li>Sergey Vasiliev for spending a lot of time helping me research some tough bugs.
 <li>Si Wong for reporting and explaining important security vulnerabilities (fixed now).
 <li>Sylvain Ross for performance improvements to btnet_service.exe, btnet_console.exe
 <li>Tom Sella for improvements related to using terms like "issue" instead of "bug".
