git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@330 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -108,6 +108,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Josh Assing at <a href="http://jassing.com">JAssing Consulting</a>
 <li>Vincent Alexander at Kando Systems
 <li>Kellee Gunderson at <a href="http://ChampionCollegeSolutions.com">Champion College Solutions</a>
+<li>Lionel Eppes at <a href="http://www.financialexecutives.org">Financial Executives International</a>
 <li>M. Bell at <a href="http://codefaze.com">Codefaze.com</a>
 <li>Martina Hobbs at <a href="http://bannerhealth.com">Banner Health</a>
 <li>matro
