git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@332 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -100,6 +100,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>James Crane at <a href="http://youcantradeonline.co.uk">You Can Trade Online</a>
 <li>James Lloyd at <a href="http://columbiaforestproducts.com">Columbia Forest Products</a>
 <li>Jeffery Cooney
+<li>Joe Kurta at <a href="http://www.techspa.net">TechSpa, Inc.</a>
 <li>Joe Loll
 <li>John Braga at Crown Systems
 <li>John Peters
