git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@336 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 3.1.8 June 2, 2009
+Version 3.1.9 June 23, 2009
 
 
 <p>
@@ -84,6 +84,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <b>Thanks to the following for their donations:</b>
 <p>
 <li><a href="http://legiomedia.com">Legio Media</a>
+<li><a href="http://jonrumens.com">Jon Rumens</a>
 <li>Ahmed Javad at <a href="http://valentiatech.com">Valentia Technologies</a>
 <li>Andrew McKay at <a href="http://www.kazmax.co.uk">www.kazmax.co.uk</a>
 <li>Anthony Goggin at <a href="http://www.solutionwhere.com/">Solutionwhere, Inc.</a>
@@ -93,10 +94,12 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Chris Harrington
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
 <li>Daniel Watts
+<li>Dave Lyons at <a href="http://www.bgct.org/">Baptist General Convention of Texas</a>
 <li>Dave Spicer
 <li>David Jukes at <a href="http://bigpond.com">BigPond</a>
 <li>Don McKillop at <a href="http://www.camcadtech.com">CAMcad Technologies</a>
 <li>Goran Mrvos at <a href="http://www.infosit.hr">infoSIT</a>
+<li>James Bilitski at the University of Pittsburgh at Johnstown
 <li>James Crane at <a href="http://youcantradeonline.co.uk">You Can Trade Online</a>
 <li>James Lloyd at <a href="http://columbiaforestproducts.com">Columbia Forest Products</a>
 <li>Jeffery Cooney
@@ -104,12 +107,11 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Joe Loll
 <li>John Braga at Crown Systems
 <li>John Peters
-<li><a href="http://jonrumens.com">Jon Rumens</a>
 <li>Joseph Prochazka at <a href="http://swiftbyte.com">Swift Byte</a>
 <li>Josh Assing at <a href="http://jassing.com">JAssing Consulting</a>
-<li>Vincent Alexander at Kando Systems
 <li>Kellee Gunderson at <a href="http://ChampionCollegeSolutions.com">Champion College Solutions</a>
 <li>Lionel Eppes at <a href="http://www.financialexecutives.org">Financial Executives International</a>
+<li>Lior Zarfati
 <li>M. Bell at <a href="http://codefaze.com">Codefaze.com</a>
 <li>Martina Hobbs at <a href="http://bannerhealth.com">Banner Health</a>
 <li>matro
@@ -124,6 +126,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Stanimir Mladenov
 <li>Steven Stadler at <a href="http://incircuits.com/">InCircuits, Incorporated</a>
 <li>Tian van Heerden
+<li>Vincent Alexander at Kando Systems
 <li>Wagner Ignacio Pinto Junior
 <li>William Henderson at <a href="http://msb-services.com">MSB</a>
 
