git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@338 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 3.1.9 June 23, 2009
+Version (pre) 3.2.0 July 3, 2009
 
 
 <p>
@@ -53,7 +53,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li><a target=_blank href=http://www.codeproject.com/cs/internet/pop3client.asp>POP3Client.cs</a> - Bill Dean
 <li><a target=_blank href=http://anmar.eu.org/projects/sharpmimetools>SharpMimeTools</a> (parsing MIME messages) - Copyright Angel Marin 2003-2007, LGPL license
 <li><a target=_blank href=http://logging.apache.org/log4net/>log4net</a> (logging library used by SharpMailTools) - Apache Software Foundation
-<li><a target=_blank href=http://www.fckeditor.net//>FCKEditor</a> (HTML text editor) - Copyright 2003-2007 Frederico Caldeira Knabben, GPL, LGPL, or MPL license
+<li><a target=_blank href=http://ckeditor.com//>CKEditor (formerly "FCKEditor")</a> (HTML text editor) - Copyright (c) 2003-2009, CKSource - Frederico Knabben, GPL, LGPL, or MPL license
 <li><a target=_blank href=http://incubator.apache.org/lucene.net>Lucene.Net</a> (text search engine) - Apache Software Foundation
 <li><a target=_blank href=http://www.famfamfam.com>Silk Icons</a> - from Mark Jame's at <a target=_blank href=http://www.famfamfam.com>famfamfam.com</a>, Creative Commons license
 <li><a target=_blank href=http://jquery.com>jQuery</a> - javascript library - Copyright <a href=http://ejohn.org/>John Resig</a> 2008, MIT or GPL license.
@@ -89,7 +89,7 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Andrew McKay at <a href="http://www.kazmax.co.uk">www.kazmax.co.uk</a>
 <li>Anthony Goggin at <a href="http://www.solutionwhere.com/">Solutionwhere, Inc.</a>
 <li>Ben Petersen
-<li>bidllc
+<li>"bidllc"
 <li>Chris Abichandani at <a href="http://continuumconcepts.com">Continuum Concepts, LLC</a>
 <li>Chris Harrington
 <li>D. Cloption at <a href="http://informationdesigns.com">Information Designs</a>
@@ -114,12 +114,12 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <li>Lior Zarfati
 <li>M. Bell at <a href="http://codefaze.com">Codefaze.com</a>
 <li>Martina Hobbs at <a href="http://bannerhealth.com">Banner Health</a>
-<li>matro
+<li>"matro"
 <li>Michael Andreas at <a href="http://liebherr.com">Liebherr</a>
 <li>Mike Elmalem at <a href="http://efactory.ca">eFactory</a>
 <li>Peter Heath
 <li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
-<li>romwil
+<li>"romwil"
 <li>Said Nashef
 <li>Samuel Morree at <a href="http://trandsoft.com/">Trandsoft Research</a>
 <li>Sotirios Filippidis
