--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version (pre) 3.2.0 July 3, 2009
+Version 3.2.0 July 3, 2009
 
 
 <p>
