git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@344 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 3.2.0 July 3, 2009
+Version 3.2.1 July 3, 2009
 
 
 <p>
@@ -51,13 +51,17 @@ Distributed under the terms of the <a target=_blank href="COPYING.TXT">GNU Gener
 <b>BugTracker.NET also includes the following software:</b>
 <p>
 <li><a target=_blank href=http://www.codeproject.com/cs/internet/pop3client.asp>POP3Client.cs</a> - Bill Dean
-<li><a target=_blank href=http://anmar.eu.org/projects/sharpmimetools>SharpMimeTools</a> (parsing MIME messages) - Copyright Angel Marin 2003-2007, LGPL license
+<li><a target=_blank href=http://anmar.eu.org/projects/sharpmimetools>SharpMimeTools</a> (parsing MIME messages) - Copyright 2003-2007, Angel Marin, LGPL license
 <li><a target=_blank href=http://logging.apache.org/log4net/>log4net</a> (logging library used by SharpMailTools) - Apache Software Foundation
-<li><a target=_blank href=http://ckeditor.com//>CKEditor (formerly "FCKEditor")</a> (HTML text editor) - Copyright (c) 2003-2009, CKSource - Frederico Knabben, GPL, LGPL, or MPL license
+<li><a target=_blank href=http://ckeditor.com//>CKEditor (formerly "FCKEditor")</a> (HTML text editor) - Copyright 2003-2009, CKSource - Frederico Knabben, GPL, LGPL, or MPL license
 <li><a target=_blank href=http://incubator.apache.org/lucene.net>Lucene.Net</a> (text search engine) - Apache Software Foundation
 <li><a target=_blank href=http://www.famfamfam.com>Silk Icons</a> - from Mark Jame's at <a target=_blank href=http://www.famfamfam.com>famfamfam.com</a>, Creative Commons license
 <li><a target=_blank href=http://jquery.com>jQuery</a> - javascript library - Copyright <a href=http://ejohn.org/>John Resig</a> 2008, MIT or GPL license.
 <li><a target=_blank href=http://datejs.com>Datejs</a> - javascript library for date handling - Copyright <a href=http://www.coolite.com>Coolite Inc.</a> 2006-2007, MIT license.
+<li><a target=_blank href=http://www.cdolivet.com/index.php?page=editArea>EditArea</a> - javascript code editor with syntax highlighting - Copyright 2007-2008, Christophe Dolivet, LGPL, Apache, or BSD license.
+
+EditArea - © Christophe Dolivet 2007-2008
+
 <p>
 <b>Thanks to the following for their technical contributions:</b>
 <p>
