git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@357 25256582-783d-0410-8f03-f819f29fef2d

--- a/about.html
+++ b/about.html
@@ -125,6 +125,7 @@ EditArea - © Christophe Dolivet 2007-2008
 <li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
 <li>"romwil"
 <li>Said Nashef
+<li>Sam Eads at <a href="http://www.techsavvyleads.com">Tech Savvy Leads, LLC</a>
 <li>Samuel Morree at <a href="http://trandsoft.com/">Trandsoft Research</a>
 <li>Sotirios Filippidis
 <li>Stanimir Mladenov
